(Format: Year/Month/Day)
Changes for 0.9.10:
*04/06/20:
  * Fix honouring of initial state on window open (Simon)
    Window.hh/cc Screen.cc
*04/06/18:
  * background xmessage in fbsetbg so it doesn't block anything
    also set the "okay" button to default so you can just press enter
    (Simon)
    fbsetbg
*04/06/17:
  * Improve rendering speed of toolbar (Simon)
    - remove many redundant renders (esp. startup)
    - only update clock if the text has changed
    - fix transparency and border on most items
    IconbarTool.hh/cc IconButton.cc Toolbar.cc Container.cc
    ClockTool.cc WorkspaceNameTool.cc
*04/06/14:
  * More menu transparency improvements (Henrik)
    Menu.cc
*04/06/13:
  * More menu transparency improvements (Henrik)
    Menu.hh/cc, MenuTheme.hh
*04/06/12:
  * Updated japanese locales from Yasuhiro Takabayashi
    <kourin at momonga-linux dot org>
    fluxbox-generate_menu.in
*04/06/10:
  * Fixed icon in menu and improved menu loading speed (Henrik)
    New option for menu file:
    [key] (label) {argument to key} <the icon filename>
    example:
    [exec] (aterm) {aterm} <terminal.xpm>
    MenuItem.cc/hh, FbMenuParser.hh/cc, MenuCreator.cc
*04/06/08:
  * Fix up bsetroot nls, and couple of other tweaks (Simon)
    util/Makefile.am bsetroot.cc nls/Makefile.am fluxbox-nls.hh nlsinfo 
    MenuCreator.cc WorkspaceMenu.cc
  * Some man page license updates c/- Han
    fluxbox.1.in bsetroot.1 startfluxbox.1
*04/06/07:
  * New menu theme items:
    menu.titleHeight: integer
    menu.itemHeight: integer
    The height of the item/title will be the biggest of
    font height + bevel and the specified height, so the
    text will always fit.
    MenuTheme.hh/cc
    (Henrik)
  * Improved menu transparent rendering speed and
    the text is not transparent anymore so you are able
    to see the text even if you have 100% transparency
    Menu.hh/cc  (Henrik)
  * Moved drawing of menu items to MenuItem class
    MenuItem.hh/cc, MenuSeparator.hh/cc (Henrik)